Add swt-modular module