@@ -49,6 +49,18 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.systemtray.samplerfx.App</mainClass>
+                            <launcher>SamplerFX</launcher>
+                            <jlinkZipName>SamplerFX</jlinkZipName>
+                            <jlinkImageName>SamplerFX</jlinkImageName>
+                            <noManPages>true</noManPages>
+                            <stripDebug>true</stripDebug>
+                            <noHeaderFiles>true</noHeaderFiles>
+                            <compress>2</compress>
+                            <ignoreSigningInformation>true</ignoreSigningInformation>
+
+                            <options>
+                                <option>--enable-native-access=javafx.graphics,org.eclipse.swt.win32.win32.x86_64</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
